--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="379dp"
-        android:layout_height="632dp"
+        android:layout_width="372dp"
+        android:layout_height="636dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toTopOf="@+id/send"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,15 +23,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/errorText"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:textColor="#F44336"
-                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -64,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:ems="10"
-                android:hint="dd/mm/yyyy"
+                android:hint="dd-mm-yyyy"
                 android:inputType="date"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textSize="16sp" />
@@ -119,6 +110,21 @@
             </RadioGroup>
 
             <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/appliedVacc"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/spinner"
+                android:minHeight="48dp" />
+
+            <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -134,29 +140,16 @@
                     android:id="@+id/vaccYes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="onVaccClicked"
                     android:text="Yes" />
 
                 <RadioButton
                     android:id="@+id/vaccNo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="onVaccClicked"
                     android:text="No" />
             </RadioGroup>
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/appliedVacc"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
-
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/spinner"
-                android:minHeight="48dp" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -227,11 +220,24 @@
         android:id="@+id/send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:enabled="true"
         android:text="SEND"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/errorText"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:textAlignment="center"
+        android:textColor="#F44336"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/send" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
